# HiveMind

./: .gitignore  LICENSE  Makefile  README.md  README.zh-CN.md  docker-compose.yml  new feat
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend-java/: Dockerfile  README.md  pom.xml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/adapters/: __init__.py  base.py  echo_adapter.py  langgraph_adapter.py
backend/app/api/v1/: agents.py  events.py  health.py  router.py  runs.py
backend/app/core/: config.py  http_metrics.py  logging.py  telemetry.py
backend/app/db/: base.py  session.py
backend/app/events/: __init__.py  bus.py
backend/app/models/: __init__.py  agent.py  run.py
backend/app/runtime/: resume_context.py
backend/app/schemas/: __init__.py  agent.py  run.py
backend/app/services/: __init__.py  run_service.py
backend/app/worker/: executor.py  monitor.py  queue.py  runner.py
backend/tests/: conftest.py  test_event_replay.py  test_health.py  test_langgraph_adapter.py  test_queue_monitor.py  test_runs.py  test_telemetry.py  test_worker_queue.py
docker/: otel-collector.yaml
docs/: api-contract.md  architecture.md  data-model.md  deployment.md  plan.md
frontend/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: CheckpointMarker.tsx  CheckpointPanel.tsx  EventStream.tsx  Providers.tsx  StatusBadge.tsx
(+31 files in other folders)
