[project]
name = "agentflow"
version = "0.1.0"
description = "Open-source multi-agent runtime"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy>=2.0.36",
    "greenlet>=3.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "redis>=5.2",
    "httpx>=0.28",
    "sse-starlette>=2.1",
    "structlog>=24.4",
    "anyio>=4.6",
    "python-ulid>=3.0",
    "langgraph>=0.2.50",
    "langchain-core>=0.3",
    "opentelemetry-api>=1.28",
    "opentelemetry-sdk>=1.28",
    "opentelemetry-exporter-otlp-proto-http>=1.28",
    "opentelemetry-instrumentation-fastapi>=0.49b0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "httpx>=0.28",
    "aiosqlite>=0.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "RUF"]
# B008: FastAPI uses Depends() in defaults by design.
# RUF002/RUF003: docstrings use en-dashes as natural punctuation.
ignore = ["E501", "B008", "RUF002", "RUF003"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "fakeredis[lua]>=2.20",
]
